--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "testing.js",
     "type": "module",
     "scripts": {
-        "test": "node testing.js"
+        "test": "node tree.test.js"
     },
     "repository": {
         "type": "git",
