--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-.vim*
-.*~
-*.swp
-*.swo
+# swap
+[._]*.s[a-w][a-z]
+[._]s[a-w][a-z]
+# session
+Session.vim
+# temporary
+.netrwhist
+*~
+# auto-generated tag files
+tags
